2012-08-10  Sergio Martin <sergio.martin@artica.es>

	* include/functions_api.php: Force the static graphs in the 
	last added function to api

2012-08-10  Sergio Martin <sergio.martin@artica.es>

	* include/functions_api.php: Add the missed function api_get_graph_module_data
	and update it to work with last graph system

2012-08-06  Junichi Satoh  <junichi@rworks.jp>

	* include/functions_config.php: Fixed that blank page is shown after
	login when update_manager is disabled.

2012-07-31  Junichi Satoh  <junichi@rworks.jp>

	* extras/pandoradb_migrate_v3.2_to_v4.0.sql: Removed sql to update
	'tlocal_componet' table. It's an enterprise table.

2012-07-30  Hirofumi Kosaka  <kosaka@rworks.jp>

	* operation/reporting/graph_viewer.php: replace 'Period' with
	'Time range' to be translated. This is for consistency of
	labels between single graphs and custom graphs.

2012-07-26  Hirofumi Kosaka  <kosaka@rworks.jp>

	* godmode/agentes/module_manager_editor_common.php:
	'Disable' checkbox was not enabled when you unlinked modules
	from a policies.

	bug fix for enterprise version. 

2012-07-24 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/module_manager.php: fixed the messages for to
	delete multiple modules.
	
	Fixes: #3543532
	
	MERGED FROM TRUNK

2012-07-24 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_networkmap.php,
	operation/agentes/networkmap.groups.php,
	operation/agentes/networkmap_list.php: Fixed several problems with
	network maps


2012-07-20  Hirofumi Kosaka  <kosaka@rworks.jp>

        * index.php: bug fix: 'Enforce https' led to wrong URL to
	cause "error 310: too many redirects".
	* include/functions_ui.php: bug fix: ui_get_full_url() had
	returned URL with unnecessary wrong port specifier ":80",
	when switching 'http' to 'https' by 'enforce https'.

	Merged from trunk

2012-07-17 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/agentes/group_view.php: Backport of aesthetic bugfix
	of group view indentation.
